--- a/src/main/resources/View/Login.fxml
+++ b/src/main/resources/View/Login.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="rootNode" prefHeight="484.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.LoginController">
+<AnchorPane fx:id="rootNode" prefHeight="484.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.LoginController">
     <children>
       <ImageView fitHeight="484.0" fitWidth="810.0" layoutX="1.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -24,7 +23,7 @@
             <Font name="DejaVuMathTeXGyre-Regular" size="14.0" />
          </font>
       </TextField>
-      <JFXButton fx:id="btnLogin" layoutX="462.0" layoutY="430.0" onAction="#btnLoginOnAction" prefHeight="24.0" prefWidth="75.0" style="-fx-background-color: #f3e5f5;" text="LogIn">
+      <JFXButton fx:id="btnLogin" layoutX="493.0" layoutY="425.0" onAction="#btnLoginOnAction" prefHeight="30.0" prefWidth="172.0" style="-fx-background-color: #f3e5f5;" text="LogIn">
          <font>
             <Font name="DejaVuMathTeXGyre-Regular" size="16.0" />
          </font>
@@ -39,10 +38,5 @@
             <Image url="@../Assets/pw.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnLogin1" layoutX="557.0" layoutY="430.0" onAction="#btnsigninOnAction" prefHeight="30.0" prefWidth="94.0" style="-fx-background-color: #f3e5f5;" text="Signup">
-         <font>
-            <Font name="DejaVuMathTeXGyre-Regular" size="16.0" />
-         </font>
-      </JFXButton>
     </children>
 </AnchorPane>
